revised index.html. added images folder. added pages folder

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -9,7 +9,23 @@
 </head>
 
 <body>
-    <h1>Hello Mars!</h1>
+    <!-- This is a comment prototype -->
+    <p>This is an ordered list of <strong><em>TV shows!</em></strong></p>
+    <ol>
+        <li>Sopranos</li>
+        <li>Game of Thrones</li>
+        <li>The Wire</li>
+        <li>Succession</li>
+        <li>Entourage</li>
+    </ol>
+    <p>This is an unordered list of <strong><em>TV shows!</em></strong></p>
+    <ul>
+        <li>Sopranos</li>
+        <li>Game of Thrones</li>
+        <li>The Wire</li>
+        <li>Succession</li>
+        <li>Entourage</li>
+    </ul>
 </body>
 
 </html>
